# libwat

./: CMakeLists.txt  README  releases_info.txt
asterisk/: .gitignore  asterisk-1.6.2.21.patch  asterisk-1.6.2.22.patch  asterisk-1.8.32.2.patch  asterisk-1.8.7.1.patch  asterisk-1.8.9.0.patch  asterisk-10.1.0.patch  asterisk-11.1.2.patch  asterisk-11.15.0.patch  asterisk-11.16.0.patch  asterisk-11.18.0.patch  asterisk-13.2.0.patch
distr/: gen_changelog.pl  libwat.spec  sangoma_ftp.pl
distr/1.0/: .git_info  .gitignore  helper_functions.sh  mkrelease.sh
distr/test_asterisk/: test_asterisk_patches.sh
patches/asterisk/: asterisk-1.8.7.1.patch
src/: CMakeLists.txt  motorola.c  output.txt  pduconv.c  telit.c  test_buffer.c  test_wat.c  wat.c  wat_buffer.c  wat_call.c  wat_cmd.c  wat_config.h.in  wat_core.c  wat_event.c  wat_mutex.c  wat_queue.c  wat_sched.c  wat_sms.c  wat_sms_pdu.c
src/include/: libwat.h  wat_declare.h
src/include/private/: motorola.h  pduconv.h  telit.h  wat_buffer.h  wat_internal.h  wat_mutex.h  wat_queue.h  wat_sched.h  wat_sms_pdu.h
test/: CMakeLists.txt  config.h.cmake  test_dahdi_sms.c  test_dahdi_voice.c  test_utils.c  test_utils.h  test_wanpipe_voice.c  testwat_blocking.c  testwat_dahdi.c  testwat_dahdi_sms.c  testwat_dahdi_voice.c  wat_test.c
