INCLUDE(CheckIncludeFiles)
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/include")

SET(CMAKE_REQUIRED_INCLUDES /usr/include/wanpipe)
CHECK_INCLUDE_FILES(dahdi/user.h HAVE_DAHDI_USER_H)
CHECK_INCLUDE_FILES(libsangoma.h HAVE_LIBSANGOMA_H)

IF(HAVE_DAHDI_USER_H OR HAVE_LIBSANGOMA_H)
	ADD_EXECUTABLE(wat_test
		${PROJECT_SOURCE_DIR}/test/wat_test.c
		${PROJECT_SOURCE_DIR}/test/test_utils.c)
	TARGET_LINK_LIBRARIES(wat_test wat)
	ADD_DEPENDENCIES(wat_test ${PROJECT_NAME})
ELSE(HAVE_DAHDI_USER_H OR HAVE_LIBSANGOMA_H)
	message("No Wanpipe or DAHDI detected, skipping wat_test compilation ...")
ENDIF(HAVE_DAHDI_USER_H OR HAVE_LIBSANGOMA_H)

IF(HAVE_LIBSANGOMA_H)
	message("Wanpipe installation detected")
	TARGET_LINK_LIBRARIES(wat_test sangoma)
	INCLUDE_DIRECTORIES("/usr/include/wanpipe")
ENDIF(HAVE_LIBSANGOMA_H)

IF(HAVE_DAHDI_USER_H)
	# DAHDI test applications
	SET(DAHDI_TESTS
		test_dahdi_sms)

	message("DAHDI installation detected")

	FOREACH(TEST ${DAHDI_TESTS})
		ADD_EXECUTABLE(${TEST}
		${PROJECT_SOURCE_DIR}/test/${TEST}.c
		${PROJECT_SOURCE_DIR}/test/test_utils.c)
		TARGET_LINK_LIBRARIES(${TEST} wat)
		ADD_DEPENDENCIES(${TEST} ${PROJECT_NAME})
	ENDFOREACH(TEST)
ENDIF(HAVE_DAHDI_USER_H)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_SOURCE_DIR}/config.h)
